--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -10,9 +11,11 @@
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
+    "react-device-detect": "^1.13.1",
     "react-dom": "^16.13.1",
     "react-mdl": "^2.1.0",
-    "react-scripts": "3.4.1"
+    "react-screen-orientation": "0.0.4",
+    "react-scripts": "^3.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
