--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-dom": "^16.13.1",
     "react-mdl": "^2.1.0",
     "react-screen-orientation": "0.0.4",
-    "react-scripts": "^3.4.3"
+    "react-scripts": "^3.4.3",
+    "react-scroll": "^1.8.1",
+    "react-sticky-box": "^0.9.3"
   },
   "scripts": {
     "start": "react-scripts start",
